--- a/web/public/index.html
+++ b/web/public/index.html
@@ -16,7 +16,17 @@
       // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/jsp3pks1'
       (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/jsp3pks1';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(document.readyState==='complete'){l();}else if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
     </script>
-    <title>Gigover</title>
+    <title>Gigover | Project management for construction made easy</title>
+    <script type="text/javascript">
+      window.GUMLET_CONFIG = {
+        hosts: [{
+          current: "{{firebasestorage.googleapis.com}}",
+          gumlet: "gigover.gumlet.io"
+        }],
+        lazy_load: true
+      };
+      (function(){d=document;s=d.createElement("script");s.src="https://cdn.gumlet.com/gumlet.js/2.1/gumlet.min.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
